@@ -6,7 +6,6 @@ These are needed for 0.4:
 
   o rewrite igraph_i_eit_create_allfromto, etc., it's just a copy of the
     index.
-  o igraph_vs_seq bug, the last node is omitted???
 
 o R interface: curved edges in plots (tkplot and plot)
 o attribute support in to_undirected
